tree-sitter-alexandrite/test/corpus/strings.txt
==================
Strings, escapes and interpolation
==================

s = "héllo #{x} \t \u00e9 \# #{"in #{y}"}"
r = 'no #{interp} \n'

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (string
        (string_content)
        (interpolation
          (identifier))
        (string_content)
        (escape_sequence)
        (string_content)
        (escape_sequence)
        (string_content)
        (escape_sequence)
        (string_content)
        (interpolation
          (string
            (string_content)
            (interpolation
              (identifier)))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (raw_string))))

==================
Heredoc with escapes and interpolation
==================

a = <<~EOS
  tab:\tend
  x is #{x}, \#{x} is not
  #{y} first
EOS
puts a

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (heredoc)))
  (heredoc_body
    (heredoc_content)
    (escape_sequence)
    (heredoc_content)
    (interpolation
      (identifier))
    (heredoc_content)
    (escape_sequence)
    (heredoc_content)
    (interpolation
      (identifier))
    (heredoc_content)
    (heredoc_end))
  (expression_statement
    (command_call
      (identifier)
      (command_argument_list
        (identifier)))))

==================
Quoted and raw heredocs
==================

b = <<~"EOS".strip
  one\ntwo #{x + 1}
  EOS
c = <<~'RAW'
  a\tb #{x}
RAW

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (member_expression
        (heredoc)
        (identifier))))
  (heredoc_body
    (heredoc_content)
    (escape_sequence)
    (heredoc_content)
    (interpolation
      (binary_expression
        (identifier)
        (integer)))
    (heredoc_content)
    (heredoc_end))
  (expression_statement
    (assignment_expression
      (identifier)
      (heredoc)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))

==================
Two heredocs on one line
==================

fmt.printf("%q %q\n", <<~ONE, <<~'TWO')
  1\n
ONE
  2\n
TWO
done()

---

(source_file
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (string
          (string_content)
          (escape_sequence))
        (heredoc)
        (heredoc))))
  (heredoc_body
    (heredoc_content)
    (escape_sequence)
    (heredoc_content)
    (heredoc_end))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (expression_statement
    (call_expression
      (identifier)
      (argument_list))))

==================
Command literals
==================

out = `ls -l #{dir}`.~output
`printf '[%s]' #{*args} | grep -c x`
`echo a
  b`

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (member_expression
        (command_literal
          (command_content)
          (interpolation
            (identifier)))
        (identifier))))
  (expression_statement
    (command_literal
      (command_content)
      (splice
        (identifier))
      (command_content)))
  (expression_statement
    (command_literal
      (command_content))))
