tree-sitter-alexandrite/test/corpus/sugar.txt
==================
Optional or jump
==================

n = find(k) || fail ParseErr.Bad(pos: 1)
v = opt || return
w = opt || return 0
for x in xs {
  y = x.first || next
  z = x.last || break
}

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (call_expression
          (identifier)
          (argument_list
            (identifier)))
        (fail_statement
          (call_expression
            (member_expression
              (constant)
              (constant))
            (argument_list
              (keyword_argument
                (identifier)
                (integer))))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (identifier)
        (return_statement))))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (identifier)
        (return_statement
          (integer)))))
  (for_statement
    (identifier)
    (identifier)
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (member_expression
              (identifier)
              (identifier))
            (next_statement))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (member_expression
              (identifier)
              (identifier))
            (break_statement)))))))

==================
Optional or jump inside interpolation
==================

puts "got #{opt || return}"

---

(source_file
  (expression_statement
    (command_call
      (identifier)
      (command_argument_list
        (string
          (string_content)
          (interpolation
            (binary_expression
              (identifier)
              (return_statement))))))))

==================
Bare jumps as case arms
==================

case n { 0 => return 0; 1 => fail e; 2 => break; 3 => next; _ => n * 2 }

---

(source_file
  (expression_statement
    (case_expression
      (identifier)
      (case_arm
        (integer)
        (return_statement
          (integer)))
      (case_arm
        (integer)
        (fail_statement
          (identifier)))
      (case_arm
        (integer)
        (break_statement))
      (case_arm
        (integer)
        (next_statement))
      (case_arm
        (identifier)
        (binary_expression
          (identifier)
          (integer))))))

==================
Keyword arguments and defaults
==================

def info(msg: Str, tags: [Str] = [], level: Int = 0) { }
info("hi")
info("hi", level: 2, tags: ["a"])

---

(source_file
  (function_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier))
      (parameter
        (identifier)
        (array_type
          (type_identifier))
        (array_literal))
      (parameter
        (identifier)
        (type_identifier)
        (integer)))
    (block))
  (expression_statement
    (call_expression
      (identifier)
      (argument_list
        (string
          (string_content)))))
  (expression_statement
    (call_expression
      (identifier)
      (argument_list
        (string
          (string_content))
        (keyword_argument
          (identifier)
          (integer))
        (keyword_argument
          (identifier)
          (array_literal
            (string
              (string_content))))))))
