tree-sitter-alexandrite/test/corpus/types.txt
==================
Declarations with every kind of type
==================

a: [U32; 4] = [0; 4]
b: Map[Str, [Int]] = {"a" => [1]}
c: (Int, Str) -> Bool? = f
d: ~Int?<ParseErr | strconv.NumError> = g()
e: @Node[T]? = none
t: (Int, Str) = (1, "a")
p: ((Int) -> Int)? = none
q: geom.Point = geom.Point.new()

---

(source_file
  (declaration_statement
    (identifier)
    (fixed_array_type
      (type_identifier)
      (integer))
    (array_repeat
      (integer)
      (integer)))
  (declaration_statement
    (identifier)
    (generic_type
      (type_identifier)
      (type_arguments
        (type_identifier)
        (array_type
          (type_identifier))))
    (map_literal
      (pair
        (string
          (string_content))
        (array_literal
          (integer)))))
  (declaration_statement
    (identifier)
    (function_type
      (type_identifier)
      (type_identifier)
      (optional_type
        (type_identifier)))
    (identifier))
  (declaration_statement
    (identifier)
    (result_type
      (optional_type
        (type_identifier))
      (error_set
        (type_identifier)
        (scoped_type_identifier
          (identifier)
          (type_identifier))))
    (call_expression
      (identifier)
      (argument_list)))
  (declaration_statement
    (identifier)
    (optional_type
      (handle_type
        (type_identifier)
        (type_arguments
          (type_identifier))))
    (none))
  (declaration_statement
    (identifier)
    (tuple_type
      (type_identifier)
      (type_identifier))
    (tuple_expression
      (integer)
      (string
        (string_content))))
  (declaration_statement
    (identifier)
    (optional_type
      (parenthesized_type
        (function_type
          (type_identifier)
          (type_identifier))))
    (none))
  (declaration_statement
    (identifier)
    (scoped_type_identifier
      (identifier)
      (type_identifier))
    (call_expression
      (member_expression
        (member_expression
          (identifier)
          (constant))
        (identifier))
      (argument_list))))

==================
Type tests
==================

def rewind[R](r: R) -> R {
  x = r
  x.seek!(0) if R is io.Seeker
  if T is like Int && !(T is Str) {
    x
  }
  ok = Box[T] is Shape
  x
}

---

(source_file
  (function_definition
    (identifier)
    (type_parameters
      (type_parameter
        (type_identifier)))
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (return_type
      (type_identifier))
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (identifier)))
      (if_modifier
        (expression_statement
          (call_expression
            (member_expression
              (identifier)
              (identifier))
            (argument_list
              (integer))))
        (type_test
          (type_identifier)
          (scoped_type_identifier
            (identifier)
            (type_identifier))))
      (expression_statement
        (if_expression
          (binary_expression
            (type_test
              (type_identifier)
              (like_type
                (type_identifier)))
            (unary_expression
              (parenthesized_expression
                (type_test
                  (type_identifier)
                  (type_identifier)))))
          (block
            (expression_statement
              (identifier)))))
      (expression_statement
        (assignment_expression
          (identifier)
          (type_test
            (type_application
              (type_identifier)
              (type_arguments
                (type_identifier)))
            (type_identifier))))
      (expression_statement
        (identifier)))))

==================
Generic types applied in expressions
==================

s = Stack[Int].new
g = geom.Stack[Map[Str, Int]].new(4)
v = TABLE[i]
w = SIZES[N]

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (member_expression
        (type_application
          (type_identifier)
          (type_arguments
            (type_identifier)))
        (identifier))))
  (expression_statement
    (assignment_expression
      (identifier)
      (call_expression
        (member_expression
          (type_application
            (scoped_type_identifier
              (identifier)
              (type_identifier))
            (type_arguments
              (generic_type
                (type_identifier)
                (type_arguments
                  (type_identifier)
                  (type_identifier)))))
          (identifier))
        (argument_list
          (integer)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (index_expression
        (constant)
        (identifier))))
  (expression_statement
    (assignment_expression
      (identifier)
      (index_expression
        (constant)
        (constant)))))
